--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark_gray">#3C4048</color>
+    <color name="gray">#B2B2B2</color>
+    <color name="light_gray">#EAEAEA</color>
 </resources>
