--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark_gray">#3C4048</color>
     <color name="gray">#B2B2B2</color>
     <color name="light_gray">#EAEAEA</color>
+    <color name="Accent_orange">#ffa154</color>
 </resources>
