--- a/app/src/main/res/layout/workout.xml
+++ b/app/src/main/res/layout/workout.xml
@@ -8,37 +8,25 @@
 
     <RelativeLayout
         android:id="@+id/relative_layout"
-        android:layout_width="394dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/title_card_view_background"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="300dp"
+            android:layout_marginTop="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:layout_marginStart="10dp"
-            android:gravity="start"
             android:text="@string/app_name"
-            android:layout_marginEnd="20dp"
+            android:textAlignment="center"
             android:textColor="#37474F"
             android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/workout_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:background="@android:color/transparent"
-            android:layout_toEndOf="@id/title"
-            android:text="@string/next"
-            android:textColor="@color/black" />
-
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
