--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -8,6 +8,6 @@
         android:pathData="M20,40 L10,40 M10,50.0 L20,50.0 M10.0,40.0 L10,50 M20,30 L20,60 M30,30 L20,30 M20,60 L30,60 M30,30 L30,60 M30,42.5 L65,42.5 M30,47.5 L65,47.5 M65,30 L65,60 M65,30 L75,30 M65,60 L75,60 M75,30 L75,60 M75,40 L85,40 M75,50 L85,50 M85,40 L85,50"
         android:strokeWidth="10"
         android:strokeLineCap="round"
-        android:fillColor="@color/Accent_orange"
-        android:strokeColor="@color/Accent_orange"/>
+        android:fillColor="@color/orange"
+        android:strokeColor="@color/orange"/>
 </vector>
