--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -24,9 +24,11 @@
         />
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/video_title"
+        android:layout_above="@+id/goToTimerView"
         >
         <TextView
             android:id="@+id/video_description"
@@ -37,4 +39,17 @@
             android:textColor="@color/white"
             tools:text="hello"/>
     </ScrollView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/goToTimerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/go_to_timer_button_backgroud"
+        android:text="@string/go_to_timer" />
 </RelativeLayout>
