--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="dark_gray">#3C4048</color>
     <color name="gray">#B2B2B2</color>
     <color name="light_gray">#EAEAEA</color>
-    <color name="Accent_orange">#ffa154</color>
+    <color name="orange">#FFA154</color>
+    <color name="red">#FF7676</color>
+    <color name="green">#80FF00</color>
 </resources>
