--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -37,6 +37,8 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:textColor="@color/white"
+            android:singleLine="false"
+            android:maxEms="40"
             tools:text="hello"/>
     </ScrollView>
 
