--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,11 +6,13 @@
     android:background="@color/dark_gray"
     tools:context=".VideoActivity">
 
+    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>
+
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/video_view"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="300dp"/>
-
 
     <TextView
         android:id="@+id/video_title"
